--- a/css/speakers/overlay.css
+++ b/css/speakers/overlay.css
@@ -1,22 +1,18 @@
 .speaker_overlay {
     height: 0%;
-    width: 70%;
+    width: 60%;
     position: fixed;
     z-index: 2500;
-    top: 15%;
-    left: 15%;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    top: 25%;
+    left: 20%;
+    background-color: rgba(255, 255, 255, 0.97);
     overflow-y: hidden;
     transition: 0.5s;
 }
 
 .speaker_overlay-content {
-    position: relative;
-    top: 25%;
     width: 100%;
     text-align: center;
-    margin-top: 30px;
 }
 
 .speaker_overlay a {
@@ -30,6 +26,24 @@
 
 .speaker_overlay a:hover, .speaker_overlay a:focus {
     color: #f1f1f1;
+}
+
+.speaker_overlay .text-box{
+    width: 80%;
+    height: auto;
+    padding: 2% 0 2% 0;
+    margin-left: 10%;
+    display: none;
+}
+
+.speaker_overlay p{
+	font-size: 15px;
+	font-weight: 200;
+	margin: 10px 0;
+	color: #292929;
+	line-height: 25px;
+	text-align: justify;
+    text-justify: distribute;
 }
 
 .speaker_overlay .closebtn {
@@ -72,4 +86,21 @@
 
 .blurry_button{
   filter: blur(4px);
+}
+
+.overlay-title{
+    margin-left: 10%; 
+    left: 10%;
+    height: 20%;
+    width: 80%;
+    border-bottom: solid 1px red;
+}
+
+.overlay-title h2{
+    padding: 5% 0 2% 0;
+    font-size: 24px;
+    font-weight: 500;
+    font: Roboto;
+    color: #292929;
+    display: none;
 }
