--- a/css/speakers/overlay.css
+++ b/css/speakers/overlay.css
@@ -1,5 +1,6 @@
 .speaker_overlay {
     height: 0%;
+
     width: 60%;
     position: fixed;
     z-index: 2500;
@@ -7,7 +8,7 @@
     left: 20%;
     background-color: rgba(255, 255, 255, 0.97);
     overflow-y: hidden;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .speaker_overlay-content {
@@ -81,14 +82,10 @@
 }
 
 .blurry_title{
-  filter: blur(4px);
+  filter: blur(3px);
 }
 
-.blurry_button{
-  filter: blur(4px);
-}
-
-.overlay-title{
+.speaker_overlay .overlay-title{
     margin-left: 10%; 
     left: 10%;
     height: 20%;
@@ -96,7 +93,7 @@
     border-bottom: solid 1px red;
 }
 
-.overlay-title h2{
+.speaker_overlay .overlay-title h2{
     padding: 5% 0 2% 0;
     font-size: 24px;
     font-weight: 500;
